samples/_failures_safe/1761341550_f6d3d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_432047ba.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_432047ba.c:125:9: error: expected expression at end of input
  125 |         for (
      |         ^~~
./samples/SAFE/__tmp_432047ba.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_432047ba.c:125:9: error: expected declaration or statement at end of input
